// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`creates a names/FAVSCREEN_NAME_FAVORITE action 1`] = `
Object {
  "payload": Object {
    "gender": "male",
    "name": Object {
      "isFavorite": true,
      "name": "artur",
    },
  },
  "type": "names/FAVSCREEN_NAME_FAVORITE",
}
`;

exports[`creates a names/FETCH_NAMES_SUCCESS action 1`] = `
Object {
  "payload": Object {
    "gender": "male",
    "names": Array [
      Object {
        "isFavorite": true,
        "name": "artur",
      },
    ],
  },
  "type": "names/FETCH_NAMES_SUCCESS",
}
`;

exports[`creates a names/LISTSCREEN_NAME_UNFAVORITE action 1`] = `
Object {
  "payload": Object {
    "gender": "male",
    "name": Object {
      "isFavorite": false,
      "name": "artur",
    },
  },
  "type": "names/LISTSCREEN_NAME_UNFAVORITE",
}
`;
